# LLAMA.CPP-Trainer

./: CHAT_APP_ARCHITECTURE.md  LORA_TRAINING_GUIDE.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/dark/trainer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dark/trainer/: MainActivity.kt
app/src/main/java/com/dark/trainer/data/: SupabaseClient.kt
app/src/main/java/com/dark/trainer/models/: BaseModel.kt
app/src/main/java/com/dark/trainer/repository/: AdapterRepository.kt  ModelRepository.kt
app/src/main/java/com/dark/trainer/ui/components/: AdapterUpdateDialog.kt  SettingsDialog.kt
app/src/main/java/com/dark/trainer/ui/screens/: ChatScreen.kt  MainScreen.kt  ModelLibraryScreen.kt
app/src/main/java/com/dark/trainer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/dark/trainer/viewmodel/: ChatViewModel.kt  ModelManagerViewModel.kt  UpdateState.kt
app/src/test/java/com/dark/trainer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lora/: build.gradle.kts  consumer-rules.pro
lora/src/androidTest/java/com/dark/lora/: ExampleInstrumentedTest.kt
lora/src/main/cpp/: CMakeLists.txt  copy_skel.cmake  lora.cpp  lora_graph_builder.cpp  lora_inference.cpp  lora_train.cpp  npu_test.cpp
lora/src/main/java/com/dark/lora/: LoraJNI.kt
lora/src/main/jniLibs/arm64-v8a/: npu_test
lora/src/test/java/com/dark/lora/: ExampleUnitTest.kt
notebook/: Lora.ipynb
